<resources>
    <string name="app_name">微小铺</string>
    <string name="app_exit">再次点击退出应用</string>
    <string name="language">语言:</string>
    <string name="language_zh">中文</string>
    <string name="language_fr">法文</string>

    <!-- empty layout -->
    <string name="def_empty_data_text">没有内容</string>
    <string name="def_net_error_text">网络不给力，点击刷新</string>
    <string name="def_empty_button_retry">重试</string>
    <string name="def_data_loading">加载中&#8230;</string>

    <!-- action -->
    <string name="action_ok">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_send">发送</string>
    <string name="action_back">后退</string>
    <string name="action_clear">清空</string>
    <string name="action_delete">删除</string>
    <string name="prompt">提示</string>
    <string name="zxing_title">二维码</string>

    <!-- login -->
    <string name="login_title">登陆</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_username_empty">用户名不能为空</string>
    <string name="login_password_empty">密码不能为空</string>
    <string name="login_success">登陆成功</string>
    <string name="login_failed">登录失败</string>
    
    <!-- bluetooth -->
    <string name="bluetootch_device">选择蓝牙打印机</string>
    <string name="bluetootch_empty">请选择蓝牙打印机</string>
    <string name="bluetootch_connect_success">打印机连接成功</string>
    <string name="bluetootch_connect_failed">打印机连接失败</string>
    <string name="bluetootch_print_success">打印成功</string>
    <string name="bluetootch_print_failed">打印失败</string>
    <string name="bluetootch_bonded">已配对</string>
    <string name="bluetootch_new">新设备</string>

    <!-- order -->
    <string name="order_title">订单</string>
    <string name="order_tab_1">堂吃</string>
    <string name="order_tab_2">打包</string>
    <string name="order_list_empty">暂无订单数据</string>

    <!-- goodlist -->
    <string name="good_title">菜单</string>
    <string name="good_check_pack">打包</string>
    <string name="good_check_pack_false">不打包</string>
    <string name="good_search_title">便捷点餐</string>
    <string name="good_specification">规格</string>
    <string name="good_send_setup_title">台号与人数</string>
    <string name="good_taihao_tip">台号</string>
    <string name="good_person_tip">人数</string>
    <string name="good_taihao_empty">台号不能为空</string>
    <string name="good_taihao_repeat">台号不能重复</string>
    <string name="good_order_success">下单成功</string>
    <string name="good_order_failed">下单失败</string>
    <string name="good_order_dialog_title">下单</string>
    <string name="good_order_dialog_desc">是否确认立刻下单？</string>

    <!-- formula -->
    <string name="formula_max_count_desc">最多选择%d个</string>

    <!-- cart -->
    <string name="cart_title">购物车</string>
    <string name="cart_clear">清空</string>
    <string name="cart_clear_dialog_title">清空购物车</string>
    <string name="cart_clear_dialog_desc">是否确认要清空购物车？</string>
    <string name="cart_empty">购物车为空</string>

    <!-- order -->
    <string name="order_info_title">订单详情</string>
    <string name="order_taihao_label">台号:</string>
    <string name="order_person_num_label">人数:</string>
    <string name="order_num_label">订单号:</string>
    <string name="order_action_title">订单操作</string>
    <string name="order_action_1">催单</string>
    <string name="order_action_2">打印</string>
    <string name="order_action_3">挂起</string>
    <string name="order_eatin_search_hint">请输入台号</string>
    <string name="order_pack_search_hint">请输入订单号</string>
    <string name="order_add_good">加菜</string>
    <string name="order_id">订单编号:</string>
    <string name="order_time">创建时间:</string>

    <string name="order_info_tab_1">详情</string>
    <string name="order_info_tab_2">凭单</string>
    <string name="order_info_account">账户:</string>
    <string name="order_info_date">时间:</string>
    <string name="order_info_table">桌号:</string>
    <string name="order_info_person">人数:</string>
    <string name="order_info_item_quantity">数量</string>
    <string name="order_info_item_name">名称</string>
    <string name="order_info_item_price">单价</string>
    <string name="order_info_item_reduction">减价</string>
    <string name="order_info_item_total">总价</string>
    <string name="order_info_reduction">整体减价:</string>
    <string name="order_info_total">总价:</string>
    <string name="order_info_line">点菜行数:</string>


    <!-- error -->
    <string name="error_http_request">网络不给力</string>
    <!-- splash -->
    <string name="splash_initing">初始化...</string>

    <!-- 打印机 -->
    <string name="printer_title">打印机</string>

    <!-- 数量设置 -->
    <string name="dialog_good_num_title">设置数量</string>
    <string name="dialog_good_num">数量</string>
    <string name="dialog_good_num_empty">数量不能为空</string>

</resources>
