<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/iv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_def_empty" />

    <TextView
        android:id="@+id/tv_error_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/def_net_error_text"
        android:textColor="@color/black_40"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_error"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_btn_retry_selector"
        android:text="@string/def_empty_button_retry"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>