<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_data_null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_null_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/def_empty_data_text"
        android:textColor="@color/black_40"
        android:textSize="@dimen/popup_content_text_size" />

    <Button
        android:id="@+id/btn_null"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="120dp"
        android:layout_height="@dimen/search_edit_height"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_btn_retry_selector"
        android:text="@string/def_empty_button_retry"
        android:textColor="@color/white"
        android:textSize="@dimen/popup_title_text_size" />

    <View
        android:id="@+id/temp_empty_view"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/popup_title_height"/>


</LinearLayout>