<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogLayout"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/popup_title_height"
        android:background="@color/blue_color">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:singleLine="true"
            android:text="@string/order_action_title"
            android:textColor="@color/white"
            android:textSize="@dimen/popup_title_text_size" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_cuidan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_printer_height"
        android:background="@drawable/bg_btn_popup_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/order_action_1"
        android:textColor="@color/black_80"
        android:textSize="@dimen/popup_item_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_40" />

    <TextView
        android:id="@+id/tv_print"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_printer_height"
        android:background="@drawable/bg_btn_popup_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/order_action_2"
        android:textColor="@color/black_80"
        android:textSize="@dimen/popup_item_text_size" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_40" />

    <TextView
        android:id="@+id/tv_hang"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_printer_height"
        android:background="@drawable/bg_btn_popup_selector"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/order_action_3"
        android:textColor="@color/black_80"
        android:textSize="@dimen/popup_item_text_size" />

</LinearLayout>