<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.foodorder.activity.OrderInfoActivity">

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black_80"
            android:textSize="@dimen/item_name_text_size"
            android:textStyle="bold"
            tools:text="WeShop Caisse Demon" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black_80"
            android:textSize="@dimen/item_name_text_size"
            tools:text="8 AV HENRI BARBUSSE 93000 BOBIGNY France" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/black_80"
            android:textSize="@dimen/item_name_text_size"
            tools:text="8 AV HENRI BARBUSSE 93000 BOBIGNY France" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_info_account"
                    android:textColor="@color/black_80"
                    android:textSize="@dimen/item_name_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black_80"
                    android:textSize="@dimen/item_name_text_size"
                    tools:text="root root" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_info_date"
                    android:textColor="@color/black_80"
                    android:textSize="@dimen/item_name_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black_80"
                    android:textSize="@dimen/item_name_text_size"
                    tools:text="29/05/2018 11:46:04" />

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_info_table"
                android:textColor="@color/black_80"
                android:textSize="@dimen/item_name_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black_80"
                android:textSize="@dimen/item_name_text_size"
                tools:text="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/order_info_person"
                android:textColor="@color/black_80"
                android:textSize="@dimen/item_name_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black_80"
                android:textSize="@dimen/item_name_text_size"
                tools:text="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="5dp"
            android:background="@color/black_50"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/order_info_item_quantity"
                android:textColor="@color/white"
                android:textSize="@dimen/item_name_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/order_info_item_name"
                android:textColor="@color/white"
                android:textSize="@dimen/item_name_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/order_info_item_price"
                android:textColor="@color/white"
                android:textSize="@dimen/item_name_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/order_info_item_reduction"
                android:textColor="@color/white"
                android:textSize="@dimen/item_name_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/order_info_item_total"
                android:textColor="@color/white"
                android:textSize="@dimen/item_name_text_size"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>