<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogLayout"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPromptTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="@string/prompt"
        android:textColor="@color/black_90"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="74dp"
        android:padding="10dp"
        android:textColor="@color/black_90"
        android:textSize="@dimen/popup_content_text_size" />

    <View
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/popup_ok_button_height"
            android:layout_weight="1.0"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/action_cancel"
            android:textColor="@color/black_60"
            android:textSize="@dimen/popup_ok_button_text_size" />

        <View
            android:id="@+id/line_2"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/black_10" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/popup_ok_button_height"
            android:layout_weight="1.0"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/action_ok"
            android:textColor="@color/black_60"
            android:textSize="@dimen/popup_ok_button_text_size" />
    </LinearLayout>


</LinearLayout>